--- a/DjangoProyect/app/templates/partials/css.html
+++ b/DjangoProyect/app/templates/partials/css.html
@@ -12,8 +12,9 @@ td, th {
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #f2f2f2;}
 }
+
 .button {
     background-color: #4CAF50; /* Green */
     border: none;
@@ -27,6 +28,39 @@ tr:nth-child(even) {
     cursor: pointer;
 }
 .button3 {border-radius: 8px;}
+
+.ths{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #809fff;
+    color: white;
+}
+
+.tds{
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#table{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+a:link, a:visited {
+    background-color: #809fff;
+    width: 25%;
+    height: 35%;
+    color: white;
+    padding: 7px 12.5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+
     
 #snackbar {
     visibility: hidden; /* Hidden by default. Visible on click */
