--- a/DjangoProyect/app/templates/materias.html
+++ b/DjangoProyect/app/templates/materias.html
@@ -6,9 +6,35 @@
         {% include 'partials/css.html' %}
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+    #customers {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+        }
+
+    #customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+        }
+
+    #customers tr:nth-child(even){background-color: #f2f2f2;}
+
+    #customers tr:hover {background-color: #ddd;}
+
+    #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+    }
+
+
+    </style>
     </head>
     <body>
-        <table>
+        <table id="customers">
             <thead>
                 <th>Nombre</th>
                 <th>Apellido</th>
