fixed the querys

--- a/DjangoProyect/app/templates/addNota.html
+++ b/DjangoProyect/app/templates/addNota.html
@@ -12,7 +12,7 @@
     <div class="w3-container" style="background-color: #ffff00">
         <center><span class="style" id ="alumno_n"><a class="style" style="color: #660066">Nombre:</a> {{alumno.nombre_a}}</span></center>
         <center><span class="style" id ="alumno_a"><a class="style" style="color: #660066">Apellido:</a> {{alumno.apellido_a}}</span></center>
-        <center><span class="style" id ="nota_alumno"><a class="style" style="color: #660066">Nota:</a></span><select onchange="myFunction(event)">
+        <center><span class="style" id ="nota_alumno"><a class="style" style="color: #660066">Nota:</a></span><select value=1 onchange="myFunction(event)">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
