--- a/DjangoProyect/app/templates/addNota.html
+++ b/DjangoProyect/app/templates/addNota.html
@@ -27,10 +27,10 @@
 
     <input type="hidden" value="" name="materia_id" id="materia_id">
 
-    <div class="w3-container" style="background-color: #ffff00">
-        <center><span class="style" id ="alumno_n"><a class="style" style="color: #660066">Nombre:</a> {{alumno.nombre_a}}</span></center>
-        <center><span class="style" id ="alumno_a"><a class="style" style="color: #660066">Apellido:</a> {{alumno.apellido_a}}</span></center>
-        <center><span class="style" id ="nota_alumno"><a class="style" style="color: #660066">Nota:</a></span><select value=1 onchange="myFunction(event)">
+    <div class="w3-container" style="background-color: #ffffff">
+        <center><span class="style" id ="alumno_n"><a class="style" style="color: #000000">Nombre:</a> {{alumno.nombre_a}}</span></center>
+        <center><span class="style" id ="alumno_a"><a class="style" style="color: #000000">Apellido:</a> {{alumno.apellido_a}}</span></center>
+        <center><span class="style" id ="nota_alumno"><a class="style" style="color: #000000">Nota:</a></span><select value=1 onchange="myFunction(event)">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
