--- a/DjangoProyect/app/templates/index.html
+++ b/DjangoProyect/app/templates/index.html
@@ -9,7 +9,7 @@
     <body>
          <ul class="center5">
             <li><a id="a" href="{% url 'mostrar' %}">Crear Profesor</a></li>
-            <li><a id="a" href="news.asp">Cerrar sesion</a></li>
+            <li><a id="a" href="{% url 'logout' %}">Cerrar sesion</a></li>
         </ul> <br><br><br>
 
         <table>
