--- a/DjangoProyect/app/templates/materias.html
+++ b/DjangoProyect/app/templates/materias.html
@@ -34,6 +34,11 @@
     </style>
     </head>
     <body>
+
+        <ul class="center5">
+            <li><a id="a3" href="{% url 'index' %}"> Volver </a></li>
+        </ul><br><br><br> 
+
         <table id="customers">
             <thead>
                 <th>Apellido</th>
@@ -65,7 +70,6 @@
         
         <br>
         
-        <a href="/" class="button button3">Volver</a>
     </body>
 
     <script>        
