--- a/DjangoProyect/app/templates/partials/css.html
+++ b/DjangoProyect/app/templates/partials/css.html
@@ -5,6 +5,7 @@ table {
     width: 100%;
 }
 
+
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
@@ -27,7 +28,65 @@ tr:nth-child(even) {
     margin: 4px 2px;
     cursor: pointer;
 }
-.button3 {border-radius: 8px;}
+.button3 {border-radius: 8px;
+        background-color: #809fff;
+        width: 7%;
+        color: white;
+        padding: 7px 12.5px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        
+}
+
+.center{
+    position: fixed;
+    top: 60%;
+    left: 53%;
+    width: 36em;
+    height: 18em;
+    margin-top: -9em;
+    margin-left: -15em;
+}
+
+
+.center2{
+    position: fixed;
+    top: 40%;
+    left: 64%;
+    width: 36em;
+    height: 18em;
+    margin-top: -9em;
+    margin-left: -15em;
+
+}
+
+.center3{
+    position: fixed;
+    top: 73%;
+    left: 61%;
+    margin-top: -9em;
+    margin-left: -15em;
+
+}
+
+.center4{
+    position: fixed;
+    top: 45%;
+    left: 35%;
+    margin-top: -9em;
+    margin-left: -15em;
+}
+
+.center5{
+    position: fixed;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+}
+
+
+
 
 .ths{
     padding-top: 12px;
@@ -51,12 +110,66 @@ tr:nth-child(even) {
 a:link, a:visited {
     background-color: #809fff;
     width: 25%;
-    height: 35%;
     color: white;
     padding: 7px 12.5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+}
+
+#a{
+    background-color: #809fff;
+    width: 50%;
+    color: white;
+    padding: 8px 12.5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+#a2{
+    background-color: #809fff;
+    width: 65%;
+    color: white;
+    padding: 8px 12.5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+#a3{
+    background-color: #809fff;
+    width: 100%;
+    color: white;
+    padding: 8px 12.5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
 }
 
 
